fleet/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bunker-fleet
  labels:
    name: bunker-fleet
    component: fleet-management
